<resources>
    <string name="app_name">MFace</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Homepage">首页</string>
    <string name="Sale">义卖</string>
    <string name="tools">工具</string>
    <string name="User">我的</string>


    <string-array name="me_listViewItem_strArray">
        <item>接受信息</item>
        <item>买卖商品</item>
        <item>联系客服</item>
    </string-array>
    <string-array name="setting_listViewItem_strArray">
        <item>帮助与反馈</item>
        <item>关于脸萌校园</item>
    </string-array>
    <string name="city_json">[{\"n\":\"直辖市\",\"c\":[\"北京\",\"上海\",\"天津\",\"重庆\"]},{\"n\":\"北京市\",\"c\":[\"东城区\",\"西城区\",\"崇文区\",\"宣武区\",\"朝阳区\",\"丰台区\",\"石景山区\",\"海淀区\",\"门头沟区\",\"房山区\",\"通州区\",\"顺义区\",\"昌平区\",\"大兴区\",\"怀柔区\",\"平谷区\",\"密云县\",\"延庆县\"]},{\"n\":\"上海市\",\"c\":[\"黄浦区\",\"卢湾区\",\"徐汇区\",\"长宁区\",\"静安区\",\"普陀区\",\"闸北区\",\"虹口区\",\"杨浦区\",\"闵行区\",\"宝山区\",\"嘉定区\",\"浦东新区\",\"金山区\",\"松江区\",\"青浦区\",\"南汇区\",\"奉贤区\",\"崇明县\"]},{\"n\":\"天津市\",\"c\":[\"和平区\",\"河东区\",\"河西区\",\"南开区\",\"河北区\",\"红桥区\",\"塘沽区\",\"汉沽区\",\"大港区\",\"东丽区\",\"西青区\",\"津南区\",\"北辰区\",\"武清区\",\"宝坻区\",\"宁河县\",\"静海县\",\"蓟县\"]},{\"n\":\"重庆市\",\"c\":[\"万州区\",\"涪陵区\",\"渝中区\",\"大渡口区\",\"江北区\",\"沙坪坝区\",\"九龙坡区\",\"南岸区\",\"北碚区\",\"万盛区\",\"双桥区\",\"渝北区\",\"巴南区\",\"黔江区\",\"长寿区\",\"綦江县\",\"潼南县\",\"铜梁县\",\"大足县\",\"荣昌县\",\"璧山县\",\"梁平县\",\"城口县\",\"丰都县\",\"垫江县\",\"武隆县\",\"忠县\",\"开县\",\"云阳县\",\"奉节县\",\"巫山县\",\"巫溪县\",\"石柱土家族自治县\",\"秀山土家族苗族自治县\",\"酉阳土家族苗族自治县\",\"彭水苗族土家族自治县\",\"江津市\",\"合川市\",\"永川市\",\"南川市\"]},{\"n\":\"河北省\",\"c\":[\"石家庄市\",\"唐山市\",\"秦皇岛市\",\"邯郸市\",\"邢台市\",\"保定市\",\"张家口市\",\"承德市\",\"沧州市\",\"廊坊市\",\"衡水市\"]},{\"n\":\"山西省\",\"c\":[\"太原市\",\"大同市\",\"阳泉市\",\"长治市\",\"晋城市\",\"朔州市\",\"晋中市\",\"运城市\",\"忻州市\",\"临汾市\",\"吕梁市\"]},{\"n\":\"内蒙古自治区\",\"c\":[\"呼和浩特市\",\"包头市\",\"乌海市\",\"赤峰市\",\"通辽市\",\"鄂尔多斯市\",\"呼伦贝尔市\",\"巴彦淖尔市\",\"乌兰察布市\",\"兴安盟\",\"锡林郭勒盟\",\"阿拉善盟\"]},{\"n\":\"辽宁省\",\"c\":[\"沈阳市\",\"大连市\",\"鞍山市\",\"抚顺市\",\"本溪市\",\"丹东市\",\"锦州市\",\"营口市\",\"阜新市\",\"辽阳市\",\"盘锦市\",\"铁岭市\",\"朝阳市\",\"葫芦岛市\"]},{\"n\":\"吉林省\",\"c\":[\"长春市\",\"吉林市\",\"四平市\",\"辽源市\",\"通化市\",\"白山市\",\"松原市\",\"白城市\",\"延边朝鲜族自治州\"]},{\"n\":\"黑龙江省\",\"c\":[\"哈尔滨市\",\"齐齐哈尔市\",\"鸡西市\",\"鹤岗市\",\"双鸭山市\",\"大庆市\",\"伊春市\",\"佳木斯市\",\"七台河市\",\"牡丹江市\",\"黑河市\",\"绥化市\",\"大兴安岭地区\"]},{\"n\":\"江苏省\",\"c\":[\"南京市\",\"无锡市\",\"徐州市\",\"常州市\",\"苏州市\",\"南通市\",\"连云港市\",\"淮安市\",\"盐城市\",\"扬州市\",\"镇江市\",\"泰州市\",\"宿迁市\"]},{\"n\":\"浙江省\",\"c\":[\"杭州市\",\"宁波市\",\"温州市\",\"嘉兴市\",\"湖州市\",\"绍兴市\",\"金华市\",\"衢州市\",\"舟山市\",\"台州市\",\"丽水市\"]},{\"n\":\"安徽省\",\"c\":[\"合肥市\",\"芜湖市\",\"蚌埠市\",\"淮南市\",\"马鞍山市\",\"淮北市\",\"铜陵市\",\"安庆市\",\"黄山市\",\"滁州市\",\"阜阳市\",\"宿州市\",\"巢湖市\",\"六安市\",\"亳州市\",\"池州市\",\"宣城市\"]},{\"n\":\"福建省\",\"c\":[\"福州市\",\"厦门市\",\"莆田市\",\"三明市\",\"泉州市\",\"漳州市\",\"南平市\",\"龙岩市\",\"宁德市\"]},{\"n\":\"江西省\",\"c\":[\"南昌市\",\"景德镇市\",\"萍乡市\",\"九江市\",\"新余市\",\"鹰潭市\",\"赣州市\",\"吉安市\",\"宜春市\",\"抚州市\",\"上饶市\"]},{\"n\":\"山东省\",\"c\":[\"济南市\",\"青岛市\",\"淄博市\",\"枣庄市\",\"东营市\",\"烟台市\",\"潍坊市\",\"济宁市\",\"泰安市\",\"威海市\",\"日照市\",\"莱芜市\",\"临沂市\",\"德州市\",\"聊城市\",\"滨州市\",\"荷泽市\"]},{\"n\":\"河南省\",\"c\":[\"郑州市\",\"开封市\",\"洛阳市\",\"平顶山市\",\"安阳市\",\"鹤壁市\",\"新乡市\",\"焦作市\",\"濮阳市\",\"许昌市\",\"漯河市\",\"三门峡市\",\"南阳市\",\"商丘市\",\"信阳市\",\"周口市\",\"驻马店市\"]},{\"n\":\"湖北省\",\"c\":[\"武汉市\",\"黄石市\",\"十堰市\",\"宜昌市\",\"襄樊市\",\"鄂州市\",\"荆门市\",\"孝感市\",\"荆州市\",\"黄冈市\",\"咸宁市\",\"随州市\",\"恩施土家族苗族自治州\",\"仙桃市\",\"潜江市\",\"天门市\",\"神农架林区\"]},{\"n\":\"湖南省\",\"c\":[\"长沙市\",\"株洲市\",\"湘潭市\",\"衡阳市\",\"邵阳市\",\"岳阳市\",\"常德市\",\"张家界市\",\"益阳市\",\"郴州市\",\"永州市\",\"怀化市\",\"娄底市\",\"湘西土家族苗族自治州\"]},{\"n\":\"广东省\",\"c\":[\"广州市\",\"韶关市\",\"深圳市\",\"珠海市\",\"汕头市\",\"佛山市\",\"江门市\",\"湛江市\",\"茂名市\",\"肇庆市\",\"惠州市\",\"梅州市\",\"汕尾市\",\"河源市\",\"阳江市\",\"清远市\",\"东莞市\",\"中山市\",\"潮州市\",\"揭阳市\",\"云浮市\"]},{\"n\":\"广西壮族自治区\",\"c\":[\"南宁市\",\"柳州市\",\"桂林市\",\"梧州市\",\"北海市\",\"防城港市\",\"钦州市\",\"贵港市\",\"玉林市\",\"百色市\",\"贺州市\",\"河池市\",\"来宾市\",\"崇左市\"]},{\"n\":\"海南省\",\"c\":[\"海口市\",\"三亚市\",\"五指山市\",\"琼海市\",\"儋州市\",\"文昌市\",\"万宁市\",\"东方市\",\"定安县\",\"屯昌县\",\"澄迈县\",\"临高县\",\"白沙黎族自治县\",\"昌江黎族自治县\",\"乐东黎族自治县\",\"陵水黎族自治县\",\"保亭黎族苗族自治县\",\"琼中黎族苗族自治县\",\"西沙群岛\",\"南沙群岛\",\"中沙群岛的岛礁及其海域\"]},{\"n\":\"四川省\",\"c\":[\"成都市\",\"自贡市\",\"攀枝花市\",\"泸州市\",\"德阳市\",\"绵阳市\",\"广元市\",\"遂宁市\",\"内江市\",\"乐山市\",\"南充市\",\"眉山市\",\"宜宾市\",\"广安市\",\"达州市\",\"雅安市\",\"巴中市\",\"资阳市\",\"阿坝藏族羌族自治州\",\"甘孜藏族自治州\",\"凉山彝族自治州\"]},{\"n\":\"贵州省\",\"c\":[\"贵阳市\",\"六盘水市\",\"遵义市\",\"安顺市\",\"铜仁地区\",\"黔西南布依族苗族自治州\",\"毕节地区\",\"黔东南苗族侗族自治州\",\"黔南布依族苗族自治州\"]},{\"n\":\"云南省\",\"c\":[\"昆明市\",\"曲靖市\",\"玉溪市\",\"保山市\",\"昭通市\",\"丽江市\",\"思茅市\",\"临沧市\",\"楚雄彝族自治州\",\"红河哈尼族彝族自治州\",\"文山壮族苗族自治州\",\"西双版纳傣族自治州\",\"大理白族自治州\",\"德宏傣族景颇族自治州\",\"怒江傈僳族自治州\",\"迪庆藏族自治州\"]},{\"n\":\"西藏自治区\",\"c\":[\"拉萨市\",\"昌都地区\",\"山南地区\",\"日喀则地区\",\"那曲地区\",\"阿里地区\",\"林芝地区\"]},{\"n\":\"陕西省\",\"c\":[\"西安市\",\"铜川市\",\"宝鸡市\",\"咸阳市\",\"渭南市\",\"延安市\",\"汉中市\",\"榆林市\",\"安康市\",\"商洛市\"]},{\"n\":\"甘肃省\",\"c\":[\"兰州市\",\"嘉峪关市\",\"金昌市\",\"白银市\",\"天水市\",\"武威市\",\"张掖市\",\"平凉市\",\"酒泉市\",\"庆阳市\",\"定西市\",\"陇南市\",\"临夏回族自治州\",\"甘南藏族自治州\"]},{\"n\":\"青海省\",\"c\":[\"西宁市\",\"海东地区\",\"海北藏族自治州\",\"黄南藏族自治州\",\"海南藏族自治州\",\"果洛藏族自治州\",\"玉树藏族自治州\",\"海西蒙古族藏族自治州\"]},{\"n\":\"宁夏回族自治区\",\"c\":[\"银川市\",\"石嘴山市\",\"吴忠市\",\"固原市\",\"中卫市\"]},{\"n\":\"新疆维吾尔自治区\",\"c\":[\"乌鲁木齐市\",\"克拉玛依市\",\"吐鲁番地区\",\"哈密地区\",\"昌吉回族自治州\",\"博尔塔拉蒙古自治州\",\"巴音郭楞蒙古自治州\",\"阿克苏地区\",\"克孜勒苏柯尔克孜自治州\",\"喀什地区\",\"和田地区\",\"伊犁哈萨克自治州\",\"塔城地区\",\"阿勒泰地区\",\"石河子市\",\"阿拉尔市\",\"图木舒克市\",\"五家渠市\"]},{\"n\":\"台湾省\",\"c\":[\"台北市\",\"高雄市\",\"基隆市\",\"新竹市\",\"台中市\",\"嘉义市\",\"台南市\",\"台北县\",\"桃园县\",\"新竹县\",\"苗栗县\",\"台中县\",\"彰化县\",\"南投县\",\"云林县\",\"嘉义县\",\"台南县\",\"高雄县\",\"屏东县\",\"宜兰县\",\"花莲县\",\"台东县\",\"澎湖县\",\"金门县\",\"连江县\"]},{\"n\":\"香港特别行政区\",\"c\":[\"中西区\",\"东区\",\"南区\",\"湾仔区\",\"九龙城区\",\"观塘区\",\"深水埗区\",\"黄大仙区\",\"油尖旺区\",\"离岛区\",\"葵青区\",\"北区\",\"西贡区\",\"沙田区\",\"大埔区\",\"荃湾区\",\"屯门区\",\"元朗区\"]},{\"n\":\"澳门特别行政区\",\"c\":[\"澳门市花地玛堂区\",\"澳门市圣安多尼堂区\",\"澳门市大堂区\",\"澳门市望德堂区\",\"澳门市风顺堂区\",\"海岛市嘉模堂区\",\"海岛市圣方济各堂区\"]}]</string>
    <string name="university_json">[{\"n\":\"洛阳师范大学\",\"c\":[\"全部\"]},{\"n\":\"河南科技大学\",\"c\":[\"全部\",\"开元校区\",\"西苑校区\",\"周山校区\",\"景华校区\"]},{\"n\":\"洛阳理工学院\",\"c\":[\"全部\"]},{\"n\":\"解放军外国语学院\",\"c\":[\"全部\"]},{\"n\":\"洛阳职业技术学院\",\"c\":[\"全部\"]}]</string>
    <string name="classification_json">[{\"n\":\"电子产品\",\"c\":[\"全部\",\"电脑\",\"手机\",\"相机\",\"其他\"]},{\"n\":\"书籍\",\"c\":[\"全部\",\"课本\",\"小说\",\"杂志\",\"其他\"]},{\"n\":\"衣服\",\"c\":[\"全部\",\"上装\",\"下装\",\"鞋子\",\"其他\"]},{\"n\":\"代步工具\",\"c\":[\"全部\",\"自行车\",\"电动车\",\"摩托车\",\"其他\"]},{\"n\":\"其他\",\"c\":[\"全部\",\"健身卡\",\"电影票\",\"其他\"]}]</string>
    <!--柳  工具页面-->
    <string name="tools_signin">签到</string>
    <string name="tools_initiate_signin">发起签到</string>
    <string name="tools_address_list">通讯录</string>
    <string name="tools_class_schedule">课表</string>
    <string name="tools_inquiry_signin">签到查询</string>
    <string name="tools_my_bazar">我的义卖</string>
    <string name="tools_ask_problem">问问</string>
    <string name="tools_other">更多</string>
    <string name="tools_score">成绩</string>
    <!-- 春   首页 学校信息-->
    <string name="tools_user_nickname">微微一笑</string>
    <string name="tools_user_class">软工132班</string>
    <!-- 春   首页 学校信息-->
    <string name="schoolinfo_net_teaching">网络教学中心</string>
    <string name="schoolinfo_wisdom_teaching_engineering">智慧学工</string>
    <string name="schoolinfo_net_service">网络服务</string>
    <string name="schoolinfo_free_classroom">空闲教室</string>
    <string name="schoolinfo_office_phone">办公电话</string>
    <string name="schoolinfo_classinfo">课表信息</string>
    <string name="schoolinfo_score_search">成绩查询</string>
    <string name="schoolinfo_card_service">一卡通服务</string>
    <string name="schoolinfo_calendar">校历</string>
    <string name="schoolinfo_graduation_procedures">离校手续</string>
    <string name="schoolinfo_school_news">校园新闻</string>
    <string name="schoolinfo_recernt_notice">最近通知</string>
    <string name="schoolinfo_campus_media">校园媒体</string>
    <string name="schoolinfo_common_connection">常用链接</string>
    <string name="schoolinfo_campus_train">校园直通车 >></string>
    <string name="schoolinfo_school_map">校园地图 >></string>
    <string name="schoolinfo_peripheral_traffic">周边交通 >></string>
    <string name="schoolinfo_campus_advertisement">校园广告 >></string>
    <string name="schoolinfo_practical_information">实用信息 >></string>
    <string name="schoolinfo_alumni_club">校友总汇 >></string>
    <string name="schoolinfo_school_situation">学校状况</string>
    <string name="schoolinfo_schools_departments">院系设置</string>
    <string name="schoolinfo_education_teaching">教育教学</string>
    <string name="schoolinfo_scientific_research">科学研究</string>


    <!--柳  发起签到页面-->
    <string name="initialsignin_top_navigation_left">临时</string>
    <string name="initialsignin_top_navigation_right">日常</string>
    <string name="initialsignin_top_signinscope_txt">签到范围:</string>
    <string name="initialsignin_top_signinstime_txt">签到时间:</string>
    <string name="initialsignin_top_signinspurpose_txt">签到目的:</string>
    <string name="initialsignin_top_signinlocal_txt">签到地点:</string>
    <string name="initialsignin_top_signinscope_twinty">20米</string>
    <string name="initialsignin_top_signinscope_thirty">30米</string>
    <string name="initialsignin_top_signinscope_forty">40米</string>
    <string name="initialsignin_top_signintime_twinty">20分</string>
    <string name="initialsignin_top_signintime_thirty">30分</string>
    <string name="initialsignin_top_signintime_forty">40分</string>
    <string name="initialsignin_top_signin_other">其他</string>
    <string name="initialsignin_top_meter">米</string>
    <string name="initialsignin_top_minute">分</string>
    <string name="initialsignin_top_local_hint">请输入详细地址</string>


    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_add_user_goods">AddUserGoodsActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
