<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hkd.lianmeng.Activity.MainActivity">
    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/darkgray" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#f5f5f5"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/Main_bottom_HomePage_Rad"
            style="@style/main_bottom_rad_function"
            android:drawableTop="@drawable/tuangou_selector"
            android:text="@string/Homepage"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/Main_bottom_Sale_Rad"
            style="@style/main_bottom_rad_function"
            android:drawableTop="@drawable/shangjia_selector"

            android:text="@string/Sale" />

        <RadioButton
            android:id="@+id/Main_bottom_Tools_Rad"
            style="@style/main_bottom_rad_function"
            android:drawableTop="@drawable/wode_selector"
            android:text="@string/tools" />

        <RadioButton
            android:id="@+id/Main_bottom_User_Rad"
            style="@style/main_bottom_rad_function"
            android:drawableTop="@drawable/gengduo_selector"
            android:text="@string/User" />
    </RadioGroup>
</LinearLayout>
