<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hkd.lianmeng.Activity.SchoolinfoNewListActivity">
    <!--最近通知 校园媒体-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/schoolinfo_newslist_newstitle_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueColor"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/schoolinfo_newslist_noticetitle_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/two_margin_item"
                android:button="@null"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:background="@drawable/rb_schoolinfo_notice_corners_bg"
                android:textColor="@color/white"
                android:text="@string/schoolinfo_recernt_notice"

                />
            <RadioButton
                android:id="@+id/schoolinfo_newslist_noticetitle_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/two_margin_item"
                android:button="@null"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:background="@drawable/rb_schoolinfo_notice_corners_bg"
                android:textColor="@color/white"
                android:text="@string/schoolinfo_school_news"

                />

            <RadioButton
                android:id="@+id/schoolinfo_newlist_mediatitle_rb"
                android:layout_width="wrap_content"
                android:button="@null"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="@dimen/two_margin_item"
                android:background="@drawable/rb_schoolinfo_notice_corners_bg"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/schoolinfo_campus_media" />

        </RadioGroup>
        <!-- 通知列表-->
        <ListView
            android:id="@+id/schoolinfo_moddle_infolist_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>



</RelativeLayout>
